--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "d3": "^7.9.0",
         "date-fns": "^3.6.0",
         "embla-carousel-react": "^8.5.2",
+        "firebase": "^12.6.0",
         "framer-motion": "^12.6.2",
         "input-otp": "^1.4.2",
         "leaflet": "^1.9.4",
